<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="4"
    android:paddingTop="@dimen/vertical_margin_item">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/client_name"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/horizontal_margin_item"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="name"
                android:textColor="@color/teal_200"
                android:layout_marginLeft="3dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/horizontal_margin_item" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/client_code"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/horizontal_margin_item"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="code"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/client_tel"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/horizontal_margin_item"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="12345678"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/client_email"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/horizontal_margin_item"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="email@algo.com"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/horizontal_margin_item"
                android:gravity="center_vertical"
                android:text="@string/client_visit"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_visit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="visitado"
                android:layout_marginLeft="3dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="Icon"
                android:src="@drawable/ic_phone"
                android:layout_marginRight="30dp"
                android:layout_gravity= "right" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>