<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/order_by"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/button_margin"/>

        <Spinner
            android:id="@+id/spinner_sort"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginLeft="@dimen/button_margin"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_ascending_sort"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin_between"
            android:layout_weight="1"
            android:text="@string/orden_asc" />

        <Button
            android:id="@+id/btn_descending_sort"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/orden_des"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/button_margin_between"
            android:layout_marginRight="@dimen/button_margin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Visitado: "
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>

        <RadioGroup
            android:id="@+id/rd_group_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3">
            <RadioButton
                android:id="@+id/rb_visit_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Si"
                android:textColor="@color/white"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/rb_visit_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/rb_visit_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Todos"
                android:textColor="@color/white"
                android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:backgroundTint="@color/white"
        android:background="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/telynet_recicler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
</LinearLayout>
